--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
